tests/fixtures/fail/if_let_binding_scope.sc
let main(): i32 = {
  let value = Some(42)
  if let Some(found) = value {
    found
  }
  found
}
